--- a/pandastyle.css
+++ b/pandastyle.css
@@ -6,11 +6,14 @@ body{
     font-family: Arial;
     line-height: 25px;
     background-color: darkgoldenrod;
+    margin: 0px;
 }
 
 .column{
     width: 600px;
     margin: 40px auto;
+    background-color: white;
+    padding: 1px 40px 40px 40px;
 }
 
 h1{
